Check optimes before stepping down due to priority SERVER-4810